--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <body>
     <header>
       <h1>Marta Hansen | Ceramics</h1>
+      <nav>
+        <ul>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
