style the navbar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
@@ -17,7 +17,7 @@
   <body>
     <header>
       <h1>Marta Hansen | Ceramics</h1>
-      <nav>
+      <nav class="links">
         <ul>
           <li><a href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
