--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </head>
 
   <body>
-    <header>
+    <header class="navbar">
       <h1>Marta Hansen | Ceramics</h1>
       <nav class="links">
         <ul>
-          <li><a href="#work">Work</a></li>
+          <li><a class="active" href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
